workshop03/weather/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: weather-app
        version: v1
    spec:
      containers:
      - name: weather-app-container
        image: stackupiss/weather:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
