workshop03/weather/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  weather-svc
spec:
  selector:
    app: weather-app
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3000
